@@ -49,7 +49,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/D &quot;NO_BOT_SUPPORT&quot;"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;..\lua-5.1.3\src&quot;;..\..\Omnibot\ET;..\..\Omnibot\Common"
+				AdditionalIncludeDirectories="&quot;..\sha-1&quot;;&quot;..\lua-5.1.3\src&quot;;..\..\Omnibot\ET;..\..\Omnibot\Common"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;BUILDING_REF_GL;DEBUG;GAMEDLL;USE_MDXFILE"
 				RuntimeLibrary="1"
 				UsePrecompiledHeader="0"
